Fix many2many relations
