# backend/internal/model/performance.go
@@ -4,6 +4,8 @@ import "github.com/Mroxny/slamIt/internal/api"
 
 type Performance struct {
 	api.Performance `gorm:"embedded"`
-	Votes           []Vote
+	// ParticipationId string
+	// StageId         string
+	Votes []Vote
 	Model
 }
